Fix a bug where thinking states were cut off on the UI.

--- a/src/custom.css
+++ b/src/custom.css
@@ -2,17 +2,12 @@
   border: none;
   background: none;
   background-color: none;
-  padding: 0;
+  border-radius: 0;
 }
 
 .message-loader-text {
   color: transparent;
-  background: linear-gradient(
-      135deg,
-      #FFF,
-      #454545,
-      #FFF
-  );
+  background: linear-gradient(135deg, #fff, #454545, #fff);
   background-clip: text;
   color: transparent;
   background-size: 200% 100%;
